--- a/tools/s3-restore.yaml
+++ b/tools/s3-restore.yaml
@@ -25,12 +25,14 @@ tools:
           GIT_ASKPASS_ENV=$(mktemp)
           chmod +x "$GIT_ASKPASS_ENV"
           echo -e "#!/bin/sh\necho \$TOOLS_GH_TOKEN" > "$GIT_ASKPASS_ENV"
-          GIT_ASKPASS="$GIT_ASKPASS_ENV" git clone --branch "$REPO_BRANCH" "https://$TOOLS_GH_TOKEN@$(echo $REPO_URL | sed 's|https://||')" "$REPO_DIR" > /dev/null
+          GIT_ASKPASS="$GIT_ASKPASS_ENV" 
+          git clone --branch "$REPO_BRANCH" "https://$TOOLS_GH_TOKEN@$(echo $REPO_URL | sed 's|https://||')" "$REPO_DIR" > /dev/null
           rm "$GIT_ASKPASS_ENV"
         else
           git clone --branch "$REPO_BRANCH" "$REPO_URL" "$REPO_DIR" > /dev/null
         fi
       fi
+      
       echo "finished clone"
       # cd into the cloned repo
       cd "${REPO_DIR}/${SOURCE_CODE_DIR}"
@@ -53,9 +55,3 @@ tools:
       - KUBIYA_USER_ORG
       - KUBIYA_API_KEY
       - TOOLS_GH_TOKEN
-    with_volumes:
-      - name: sqlite_data
-        path: /sqlite_data
-    with_files:
-      - source: /$HOME/.aws/credentials
-        destination: /root/.aws/credentials
