--- a/tools/s3-restore.yaml
+++ b/tools/s3-restore.yaml
@@ -5,10 +5,10 @@ tools:
     alias: s3restore
     content: |
       # Set default values for environment variables
-      REPO_URL="${REPO_URL:-https://github.com/Kubiya-Barak/testtools}"
+      REPO_BRANCH="${REPO_BRANCH:-main}"
+      GIT_ORG="Kubiya-Barak"
       REPO_NAME="${REPO_NAME:-testtools}"
       SOURCE_CODE_DIR="${SOURCE_CODE_DIR:-src}"
-      REPO_BRANCH="${REPO_BRANCH:-main}"
       REPO_DIR="${REPO_DIR:-$REPO_NAME}"
       BIN_DIR="${BIN_DIR:-/usr/local/bin}"
       APT_CACHE_DIR="${APT_CACHE_DIR:-/var/cache/apt/archives}"
@@ -21,26 +21,18 @@ tools:
       echo "starting to clone"
       # Clone repository if not already cloned
       if [ ! -d "$REPO_DIR" ]; then
-        if [ -n "$TOOLS_GH_TOKEN" ]; then
-          GIT_ASKPASS_ENV=$(mktemp)
-          chmod +x "$GIT_ASKPASS_ENV"
-          echo -e "#!/bin/sh\necho \$TOOLS_GH_TOKEN" > "$GIT_ASKPASS_ENV"
-          GIT_ASKPASS="$GIT_ASKPASS_ENV" 
-          git clone --branch "$REPO_BRANCH" "https://$TOOLS_GH_TOKEN@$(echo $REPO_URL | sed 's|https://||')" "$REPO_DIR" > /dev/null
-          rm "$GIT_ASKPASS_ENV"
-        else
-          git clone --branch "$REPO_BRANCH" "$REPO_URL" "$REPO_DIR" > /dev/null
-        fi
+          git clone -b "$REPO_BRANCH" https://"$TOOLS_GH_TOKEN"@github.com/"$GIT_ORG"/"$REPO_NAME".git $REPO_DIR
       fi
-      
+
       echo "finished clone"
       # cd into the cloned repo
       cd "${REPO_DIR}/${SOURCE_CODE_DIR}"
-
+      ls
+      
       # Build the Go script
       go get -d ./...
       go build -o s3-restore
-      ls
+      
       # Make the Go script executable and run it
       export PATH="${PATH}:/${REPO_DIR}/${SOURCE_CODE_DIR}"
     args:
