--- a/tools/aws_cli.yaml
+++ b/tools/aws_cli.yaml
@@ -13,7 +13,7 @@ tools:
     env:
       - "AWS_PROFILE"
     with_files:
-      - source: /home/appuser/.aws/credentials
+      source: /home/appuser/.aws/credentials
       destination: /root/.aws/credentials
     metadata:
       category: 
