--- a/tools/aws_cli.yaml
+++ b/tools/aws_cli.yaml
@@ -1,25 +1,16 @@
 tools:
-# https://docs.aws.amazon.com/cli/latest/userguide/cli-configure-files.html
   - name: aws_cli
     image: amazon/aws-cli
-    description: Runs AWS CLI commands - recieves the command to run as an argument
+    description: "Runs AWS CLI commands - recieves the command to run as an argument"
     alias: aws
     content: |
       aws {{.command}}
     args:
       - name: command
-        description: 'The AWS CLI command to run (example: s3 ls)'
+        description: "The AWS CLI command to run (example: s3 ls). Do not add `aws` at the front."
         required: true
     env:
-      - "AWS_PROFILE"
-    with_files:
-      - source: /home/appuser/.aws/credentials
-        destination: /root/.aws/credentials
-    metadata:
-      category: 
-        - "AWS"
-      tags: 
-        - "AWS"
-        - "CLI"
-      image_url: "https://cdn.iconscout.com/icon/free/png-256/free-amazon-aws-3521268-2944772.png"
-      documentation: "https://raw.githubusercontent.com/kubiyabot/community-tools/main/aws/README.md"
+      - "AWS_ACCESS_KEY_ID"
+      - "AWS_SECRET_ACCESS_KEY"
+      - "AWS_DEFAULT_REGION"
+      - "AWS_SESSION_TOKEN"
