--- a/tools/aws_cli.yaml
+++ b/tools/aws_cli.yaml
@@ -10,7 +10,7 @@ tools:
         description: "The AWS CLI command to run (example: s3 ls). Do not add `aws` at the front."
         required: true
     env:
-      - "AWS_ACCESS_KEY_ID"
-      - "AWS_SECRET_ACCESS_KEY"
-      - "AWS_DEFAULT_REGION"
-      - "AWS_SESSION_TOKEN"
+      - AWS_PROFILE
+    with_files:
+      - source: $HOME/.aws/credentials
+        destination: /root/.aws/credentials
