--- a/tools/toollist.yaml
+++ b/tools/toollist.yaml
@@ -1,97 +1,15 @@
 tools:
-  - name: aws-s3-list
-    description: "List S3 buckets using AWS CLI"
-    alias: "awss3list"
-    image: "amazon/aws-cli"
+  - name: aws_cli
+    image: amazon/aws-cli
+    description: "Runs AWS CLI commands - recieves the command to run as an argument"
+    alias: aws
     content: |
-      aws s3 ls
-    args: []
-    env:
-      - "AWS_ACCESS_KEY_ID"
-      - "AWS_SECRET_ACCESS_KEY"
-      - "AWS_DEFAULT_REGION"
-      - "AWS_SESSION_TOKEN"
-
-  - name: aws-list-secrets
-    description: "List S3 secret manager secrets using AWS CLI"
-    alias: "awslistsecrets"
-    image: "amazon/aws-cli"
-    content: |
-      aws secretsmanager list-secrets --max-items {{ .max_items }}
+      aws {{.command}}
     args:
-      - name: max_items
-        description: 'Maximum number of items to list'
-        required: false
-    env:
-      - "AWS_ACCESS_KEY_ID"
-      - "AWS_SECRET_ACCESS_KEY"
-      - "AWS_DEFAULT_REGION"
-      - "AWS_SESSION_TOKEN"
-
-  - name: aws-s3-list-file
-    description: "List S3 buckets using AWS CLI"
-    alias: "awss3listfile"
-    image: "amazon/aws-cli"
-    content: |
-      echo "starting"
-      cat /root/.aws/credentials
-      aws --debug s3 ls
-      echo "ended"
-    args: []
-    with_files:
-      - source: ~/.aws/credentials
-        destination: /root/.aws/credentials
-    env:
-      - "AWS_DEFAULT_REGION"
-
-  - name: cat-file
-    description: "cat file"
-    alias: "cat-file"
-    image: "alpine:20240807"
-    content: |
-      cat /tmp/bla.txt
-    args: []
-    with_files:
-      - source: $HOME/bla.txt
-        destination: /tmp/bla.txt
-
-  - name: list-env
-    description: "This tool lists all the env vars"
-    alias: "listenv"
-    image: "amazon/aws-cli"
-    content: |
-      env
-    args:
-      - name: max_items
-        description: 'Maximum number of items to list'
-        required: false
-    env:
-      - "TEST1"
-      - "TEST2"
-      - "JFROG_ACCESS_TOKEN"
-
-  - name: python-sleep
-    description: "This tool uses python to print x number of events"
-    alias: "pythonsleep"
-    type: python
-    content: |
-      import time
-      for i in range({{ .number_of_events }}):
-          print(i, flush=True)
-          time.sleep(1)
-    args:
-      - name: number_of_events
-        description: 'the number of events to send'
+      - name: command
+        description: "The AWS CLI command to run (example: s3 ls). Do not add `aws` at the front."
         required: true
-
-  - name: print-bash
-    description: "This tool uses bash to print x number of events"
-    alias: "listenv"
-    image: "amazon/aws-cli"
-    content: |
-      for ((i=1; i<={{ .number_of_times }}; i++)); do echo "sheeesh"; sleep 5; done; echo "Done!"
-    args:
-      - name: number_of_times
-        description: 'number of times to print sheeesh'
-        required: false
-    long_running: true
+    env: []
+    with_files:
+      - source: $HOME/.aws/credentials
+        destination: /root/.aws/credentials
