--- a/tools/aws-cli.yaml
+++ b/tools/aws-cli.yaml
@@ -2,12 +2,15 @@ tools:
   - name: aws_cli
     image: amazon/aws-cli
     description: "Runs AWS CLI commands - recieves the command to run as an argument"
-    alias: "aws"
+    alias: aws
     content: |
-      aws s3 ls
-    args: []
+      aws {{.command}}
+    args:
+      - name: command
+        description: "The AWS CLI command to run (example: s3 ls). Do not add `aws` at the front."
+        required: true
     env:
-      - "AWS_ACCESS_KEY_ID"
-      - "AWS_SECRET_ACCESS_KEY"
-      - "AWS_DEFAULT_REGION"
-      - "AWS_SESSION_TOKEN"
+      - AWS_PROFILE
+    with_files:
+      - source: $HOME/.aws/credentials
+        destination: /root/.aws/credentials
