--- a/tools/aws-cli.yaml
+++ b/tools/aws-cli.yaml
@@ -12,3 +12,5 @@ tools:
     with_files:
       - source: /root/.aws/credentials
         destination: /root/.aws/credentials
+      - source: $HOME/.aws/config
+        destination: /root/.aws/config
