--- a/tools/aws-cli.yaml
+++ b/tools/aws-cli.yaml
@@ -14,3 +14,5 @@ tools:
         destination: /root/.aws/credentials
       - source: $HOME/.aws/config
         destination: /root/.aws/config
+    env:
+      - "AWS_PROFILE"
