--- a/tools/jira-cli.yaml
+++ b/tools/jira-cli.yaml
@@ -4,13 +4,11 @@ tools:
     description: "Runs JIRA CLI commands - recieves the command to run as an argument"
     alias: jira
     content: |
-      jira {{.command}}
+      jira {{.command}} --bcd
     args:
       - name: command
         description: "The JIRA CLI command to run. Do not add `jira` at the front."
         required: true
-      - name: jira-workspace-name
-        description: "Which Jira work space to use"
-        required: false
     env:
       - "JIRA_OAUTH_TOKEN"
+      - "JIRA_WORKSPACE_NAME"
