--- a/tools/jira-cli.yaml
+++ b/tools/jira-cli.yaml
@@ -28,5 +28,5 @@ tools:
       - name: workspace_name
         description: "The Jira workspace name to work against"
         required: false
-    env:
+    secrets:
       - "JIRA_OAUTH_TOKEN"
